实现传感器详情接口